tests/sksl/errors/golden/SwizzleDuplicateOutput.glsl
### Compilation failed:

error: 1: cannot write to the same swizzle field more than once
1 error
